task5/tests/group/output/test4.out
lli: <stdin>:47:1: error: expected instruction opcode
Visiting Assign Node: Assigning to variable 'a'
^
